# CMakeProject2

./: CMakeLists.txt  main.cpp
src/headers/: Tool.h  YaApp.h
src/sources/: Tool.cpp  YaApp.cpp
